--- a/csssandbox/07_float_align.html
+++ b/csssandbox/07_float_align.html
@@ -32,6 +32,8 @@
         }
 
         .container {
+            padding: 10px;
+            border: yellow solid 1px;
             max-width: 960px;
             margin: 30px auto;
         }
