--- a/hotel_website/index.html
+++ b/hotel_website/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Hotel BT | Welcome</title>
+    <script src="https://kit.fontawesome.com/43d1ca9a6e.js" crossorigin="anonymous"></script>
     <meta name="description" content="Welcome to our Hotel">
     <meta name="keywords" content="hotel,boston,new england hotel">
+    <title>Hotel BT | Welcome</title>
 </head>
 
 <body>
@@ -49,5 +50,32 @@
         </div>
     </section>
 
+    <div id="test">
+
+    </div>
+
+    <section id="features">
+        <div class="box">
+            <i class="fa-solid fa-hotel fa-lg"></i>
+            <h3>Great Location</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, impedit!</p>
+        </div>
+        <div class="box background-primary">
+            <i class="fa-solid fa-utensils fa-lg"></i>
+            <h3>Free Meals</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, impedit!</p>
+        </div>
+        <div class="box" >
+            <i class="fa-solid fa-dumbbell fa-lg"></i>
+            <h3>Fitness Room</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, impedit!</p>
+        </div>
+    </section>
+
+    <div class="clr"></div>
+
+    <footer id="main-footer">
+        <p>Hotel BT &copy; 2019, All Rights Reserved</p>
+    </footer>
 </body>
 </html>
