--- a/csssandbox/15_vh_vw.html
+++ b/csssandbox/15_vh_vw.html
@@ -55,6 +55,13 @@
                 margin-top: 3rem;
             }
         }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+        }
     </style>
 
 </head>
@@ -65,6 +72,10 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Sunt dolorum vel mollitia ex est ullam minus id corrupti necessitatibus dolorem in hic alias quibusdam, fugiat atque ad vitae illo debitis perspiciatis. Molestias nobis sint provident, laborum repudiandae aliquid. Molestias nulla iusto voluptatibus illo ducimus magni quae quidem porro eos velit?</p>
         <a href="#" class="btn">Find out more</a>
     </header>
+
+    <footer>
+        <p>&copy; 2024 my website all rights reserved</p>
+    </footer>
 
 </body>
 </html>
