make UI responsive

--- a/hotel_website/index.html
+++ b/hotel_website/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
     <script src="https://kit.fontawesome.com/43d1ca9a6e.js" crossorigin="anonymous"></script>
     <meta name="description" content="Welcome to our Hotel">
     <meta name="keywords" content="hotel,boston,new england hotel">
@@ -40,7 +41,7 @@
     </section>
 
 
-    <!-- Honme info section -->
+    <!-- Home info section -->
     <section id="home-info">
         <div class="home-image"></div>
         <div class="home-content">
@@ -49,10 +50,6 @@
             <a href="about.html" class="btn light-btn">Read More</a>
         </div>
     </section>
-
-    <div id="test">
-
-    </div>
 
     <section id="features">
         <div class="box">
