--- a/hotel_website/contact.html
+++ b/hotel_website/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
     <script src="https://kit.fontawesome.com/43d1ca9a6e.js" crossorigin="anonymous"></script>
     <title>Contact</title>
 </head>
